Closed Bug 1863044 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::ipc::UtilityProcessChild::RecvStartWinFileDialogService]

Categories

(Core :: Widget: Win32, defect, P2)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox119 --- unaffected
firefox120 --- unaffected
firefox121 --- fixed

People

(Reporter: RyanVM, Assigned: rkraesig)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

Related to the OOP file picker work I'm guessing?

Crash report: https://crash-stats.mozilla.org/report/index/24f1adc2-c374-4646-8f11-e004c0231103

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!mFileDialogInstance) (attempted to double-start file dialog service)

Top 10 frames of crashing thread:

0  xul.dll  mozilla::ipc::UtilityProcessChild::RecvStartWinFileDialogService  ipc/glue/UtilityProcessChild.cpp:313
1  xul.dll  mozilla::ipc::PUtilityProcessChild::OnMessageReceived  ipc/ipdl/PUtilityProcessChild.cpp:967
2  xul.dll  mozilla::ipc::MessageChannel::DispatchAsyncMessage  ipc/glue/MessageChannel.cpp:1800
2  xul.dll  mozilla::ipc::MessageChannel::DispatchMessage  ipc/glue/MessageChannel.cpp:1725
2  xul.dll  mozilla::ipc::MessageChannel::RunMessage  ipc/glue/MessageChannel.cpp:1525
3  xul.dll  mozilla::ipc::MessageChannel::MessageTask::Run  ipc/glue/MessageChannel.cpp:1623
3  xul.dll  mozilla::RunnableTask::Run  xpcom/threads/TaskController.cpp:549
3  xul.dll  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:876
4  xul.dll  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:699
4  xul.dll  mozilla::TaskController::ProcessPendingMTTask  xpcom/threads/TaskController.cpp:485
Keywords: regression
Regressed by: 1837079

Set release status flags based on info from the regressing bug 1837079

:rkraesig, since you are the author of the regressor, bug 1837079, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Yup. Mostly from one single install-time, mostly all at once, which makes me suspect that simultaneous save-attempts aren't being handled properly.

The fallback to in-process presumably worked, judging from that install-time's crash-time distribution, so this can just be S3.

Assignee: nobody → rkraesig
Severity: -- → S3
Flags: needinfo?(rkraesig)
Priority: -- → P2

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 desktop browser crashes on nightly

:rkraesig, could you consider increasing the severity of this top-crash bug?

For more information, please visit BugBot documentation.

Flags: needinfo?(rkraesig)
Keywords: topcrash

(In reply to BugBot [:suhaib / :marco/ :calixte] from comment #3)

:rkraesig, could you consider increasing the severity of this top-crash bug?

This doesn't take down the Firefox session, or even a content process; unless the fallback path is failing, users will only experience a brief delay before the file dialog is presented.

Sticking with P2/S3 for now.

Flags: needinfo?(rkraesig)

mFileDialogInstance is not needed, since we don't reuse old file-
dialog actors. (We do reuse active file-dialog utility processes as
hosts for those actors; this check is a leftover from when that was
expected not to be the case.)

Pushed by rkraesig@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cecf09ccbda3 remove unneeded variable and associated MOZ_ASSERT r=ipc-reviewers,nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: