Bug 1863044 - remove unneeded variable and associated MOZ_ASSERT  r=ipc-reviewers,nika

`mFileDialogInstance` is not needed, since we don't reuse old file-
dialog actors. (We _do_ reuse active file-dialog utility processes as
hosts for those actors; this check is a leftover from when that was
expected not to be the case.)

Differential Revision: https://phabricator.services.mozilla.com/D192983